// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treasury-swap e2e tests should find 0 order (stETH -> DAI) before init (block 19730974) 1`] = `[]`;

exports[`treasury-swap e2e tests should find 0 order (stETH -> DAI) between 31-120m after (block 19730974) 1`] = `[]`;

exports[`treasury-swap e2e tests should find 0 order (stETH -> DAI) near 30m after (block 19730974) 1`] = `[]`;

exports[`treasury-swap e2e tests should find 0 order (stETH -> DAI) near 120m after (block 19730974) 1`] = `[]`;

exports[`treasury-swap e2e tests should find 0 order (stETH -> USDC) before init (block 19731125) 1`] = `[]`;

exports[`treasury-swap e2e tests should find 0 order (stETH -> USDC) between 31-120m after (block 19731125) 1`] = `[]`;

exports[`treasury-swap e2e tests should find 0 order (stETH -> USDC) near 30m after (block 19731125) 1`] = `[]`;

exports[`treasury-swap e2e tests should find 0 order (stETH -> USDC) near 120m after (block 19731125) 1`] = `[]`;

exports[`treasury-swap e2e tests should find 1 order (stETH -> DAI) after init (block 19730974) 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "STONKS-ORDER-FULFILL",
    "description": "Stonks order [0x35136B2d2426ECD2E86b7DBC48D6c41C52F49ade](https://etherscan.io/address/0x35136B2d2426ECD2E86b7DBC48D6c41C52F49ade) was fulfilled 17.0017 stETH -> 53229.6027 DAI",
    "labels": [],
    "metadata": {
      "args": "?",
    },
    "name": "✅ Stonks: order fulfilled",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`treasury-swap e2e tests should find 1 order (stETH -> DAI) after re-init (block 19730974) 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "STONKS-ORDER-FULFILL",
    "description": "Stonks order [0x35136B2d2426ECD2E86b7DBC48D6c41C52F49ade](https://etherscan.io/address/0x35136B2d2426ECD2E86b7DBC48D6c41C52F49ade) was fulfilled 17.0017 stETH -> 53229.6027 DAI",
    "labels": [],
    "metadata": {
      "args": "?",
    },
    "name": "✅ Stonks: order fulfilled",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`treasury-swap e2e tests should find 1 order (stETH -> USDC) after init (block 19731125) 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "STONKS-ORDER-FULFILL",
    "description": "Stonks order [0x855Ac802409D632db4452eF008b8eC1cC34C4D6e](https://etherscan.io/address/0x855Ac802409D632db4452eF008b8eC1cC34C4D6e) was fulfilled 3.0000 stETH -> 9408.4428 USDC",
    "labels": [],
    "metadata": {
      "args": "?",
    },
    "name": "✅ Stonks: order fulfilled",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`treasury-swap e2e tests should find 1 order (stETH -> USDC) after re-init (block 19731125) 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "STONKS-ORDER-FULFILL",
    "description": "Stonks order [0x855Ac802409D632db4452eF008b8eC1cC34C4D6e](https://etherscan.io/address/0x855Ac802409D632db4452eF008b8eC1cC34C4D6e) was fulfilled 3.0000 stETH -> 9408.4428 USDC",
    "labels": [],
    "metadata": {
      "args": "?",
    },
    "name": "✅ Stonks: order fulfilled",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;
